10 - network policies/k8s/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: networkpolicy-app2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
